--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="glide.core.css" />
     <link rel="stylesheet" href="glide.theme.css" />
+    <link rel="stylesheet" href="photoswipe.css" />
+
     <style>
       #main-container {
         height: 100vh;
@@ -28,18 +30,22 @@
         }
       }
       #landing-content {
-        background-color: rgba(255,255,255,.4);
+        background-color: rgba(255, 255, 255, 0.4);
         padding: 1.5rem;
       }
-      #slideshow1 {
-        height: 100vh;
-      }
-
     </style>
   </head>
   <body>
-    <script src="index.js"></script>
     <script src="glide.js"></script>
+    <script type="module">
+      import PhotoSwipeLightbox from "./photoswipe-lightbox.esm.js";
+      const lightbox = new PhotoSwipeLightbox({
+        gallery: "#my-gallery",
+        children: "a",
+        pswpModule: () => import("./photoswipe.esm.js"),
+      });
+      lightbox.init();
+    </script>
 
     <div id="main-container">
       <section id="landing">
@@ -55,8 +61,410 @@
         </div>
       </section>
     </div>
+    <section>
+      <div id="my-gallery">
+        <a
+          href="images/4Q4A2317.jpg"
+          data-pswp-width="1237"
+          data-pswp-height="875"
+        >
+          <img
+            src="images/4Q4A2317.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2328.jpg"
+          data-pswp-width="799"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2328.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2332.jpg"
+          data-pswp-width="1236"
+          data-pswp-height="824"
+        >
+          <img
+            src="images/4Q4A2332.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2356.jpg"
+          data-pswp-width="825"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2356.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2395.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2395.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2447.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2447.jpg"
+            
+            width="50%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2452.jpg"
+          data-pswp-width="825"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2452.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2455.jpg"
+          data-pswp-width="825"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2455.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2457.jpg"
+          data-pswp-width="825"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2457.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2459.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1231"
+        >
+          <img
+            src="images/4Q4A2459.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2460.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2460.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2519.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2519.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          /> </a
+        ><a
+          href="images/4Q4A2560.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2560.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2570.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2570.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2574.jpg"
+          data-pswp-width="909"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2574.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2592.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2592.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2719.jpg"
+          data-pswp-height="825"
+          data-pswp-width="1236"
+        >
+          <img
+            src="images/4Q4A2719.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2752.jpg"
+          data-pswp-height="824"
+          data-pswp-width="1236"
+        >
+          <img
+            src="images/4Q4A2752.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2760.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2760.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2797.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2797.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2798.jpg"
+          data-pswp-width="835"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2798.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2801.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2801.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2836.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2836.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2838.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2838.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2848.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2848.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2850.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2850.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2891.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2891.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2898.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2898.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2968.jpg"
+          data-pswp-width="832"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2968.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2975.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2975.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2978.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2978.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A2985.jpg"
+          data-pswp-width="832"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A2985.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+        <a
+          href="images/4Q4A3026.jpg"
+          data-pswp-width="824"
+          data-pswp-height="1236"
+        >
+          <img
+            src="images/4Q4A3026.jpg"
+            height="50%"
+            width="10%"
+            alt="Image 1"
+          />
+        </a>
+
+        <!-- More images... -->
+      </div>
+    </section>
+
     <section id="">
-      <div id="slideshow1" class="glide">
+      <div id="slideshow1" class="glide1">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide"><img src="images/4Q4A2447.jpg" /></li>
@@ -88,7 +496,7 @@
           </ul>
         </div>
       </div>
-      <div id="slideshow2" class="glide">
+      <div id="slideshow2" class="glide2">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide"><img src="images/4Q4A2328.jpg" /></li>
@@ -118,9 +526,64 @@
       <li class="glide__slide">振哲，天鸿，孟才，明泉</li>
       <li class="glide__slide">Victor, Lily</li>
     </ul>
+    <!-- Root element of PhotoSwipe -->
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+      <!-- Background of PhotoSwipe. 
+       It's a separate element, as animating opacity is faster than rgba(). -->
+      <div class="pswp__bg"></div>
+
+      <!-- Slides wrapper with overflow:hidden. -->
+      <div class="pswp__scroll-wrap">
+        <!-- Container that holds slides. -->
+        <div class="pswp__container">
+          <div class="pswp__item"></div>
+          <div class="pswp__item"></div>
+          <div class="pswp__item"></div>
+        </div>
+
+        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be removed. -->
+        <div class="pswp__ui pswp__ui--hidden">
+          <div class="pswp__top-bar">
+            <div class="pswp__counter"></div>
+            <button
+              class="pswp__button pswp__button--close"
+              title="Close (Esc)"
+            ></button>
+            <button
+              class="pswp__button pswp__button--share"
+              title="Share"
+            ></button>
+            <button
+              class="pswp__button pswp__button--fs"
+              title="Toggle fullscreen"
+            ></button>
+            <button
+              class="pswp__button pswp__button--zoom"
+              title="Zoom in/out"
+            ></button>
+            <div class="pswp__preloader">
+              <div class="pswp__preloader__icn">
+                <div class="pswp__preloader__cut">
+                  <div class="pswp__preloader__donut"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Additional elements like arrow navigation, captions, etc. -->
+        </div>
+      </div>
+    </div>
   </body>
   <script>
-    new Glide(".glide", {
+    new Glide(".glide1", {
+      type: "carousel",
+      autoplay: 3000,
+      gap: 0,
+      startAt: 0,
+      perView: 1,
+      peek: 24,
+    }).mount();
+    new Glide(".glide2", {
       type: "carousel",
       autoplay: 3000,
       gap: 0,
