--- a/index.html
+++ b/index.html
@@ -78,211 +78,7 @@
     </style>
   </head>
   <body class="montserrat noto-sans-tc">
-    <script src="index.js"></script>
-    <h1 class="pb-4 text-4xl font-bold">Michael & 子育</h1>
-    <ul>
-      <li class="music-panel">
-        <p class="time">10:00-10:50</p>
-        <!-- <p>親友陸續進場（攝影錄影團隊自由拍照留念）音樂輪放</p>   -->
-        <p class="item-chinese">嘉賓抵達及合影留念</p>
-        <p>Guest arrival and photographs</p>
-
-        <h2>🎶 儀式前 Pre-ceremony</h2>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/playlist/4X6fWZyBkBT3mMx5niou3A?utm_source=generator&theme=0"
-          width="100%"
-          height="80"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </li>
-      <li>
-        <p class="time">10:45</p>
-        <!-- <p>Erica通知親友結婚儀式即將開始</p> -->
-        <p class="item-chinese">15分鐘後宣布儀式開始</p>
-        <p>Announce the start of the ceremony in 15 minutes</p>
-      </li>
-      <li class="stop-music-panel">
-        <h3>🛑 停止音樂！ Stop the music!🛑</h3>
-      </li>
-      <li>
-        <p class="time">11:00</p>
-        <p class="item-chinese">Erica引言子育入場</p>
-        <p>Erica announces 子育 and her entrance</p>
-      </li>
-      <li>
-        <p class="time">11:05</p>
-        <p class="item-chinese">子育有話語要對阿公阿嬤說</p>
-        <p>Erica's invites 子育 to recognize her grandparents</p>
-        <p>子育 recognizes her grandparents</p>
-      </li>
-      <li >
-        <!-- <p class="item-chinese">
-          子育說完Erica邀請高雄———教會——牧師為Mi'chael和子育主持教會婚禮儀式
-        </p> -->
-        <p class="time">11:05–11:25</p>
-        <p class="item-chinese">牧師致詞及儀式</p>
-        <p>Pastor's remarks and ceremony</p>
-      </li>
-
-      <li class="music-panel">
-        <p class="time">11:30</p>
-        <p class="item-chinese">Erica請眾親友移駕至8樓E宴會廳</p>
-        <p>Guests invited to the banquet hall (8th Floor Hall E)</p>
-
-        <h2>🎶 宴會音樂 Banquet Music</h2>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/playlist/1gKOgWOANvl1lo5mQ3uTcV?utm_source=generator&theme=0"
-          width="100%"
-          height="80"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </li>
-      <li>
-        <p class="time">11:30-12:15</p>
-        <p class="item-chinese">留言簿簽名及合影</p>
-        <p>Guestbook signing and photographs</p>
-      </li>
-      <li>
-        <p class="time">12:15</p>
-        <p class="item-chinese">親友請招待邀請入座（音樂及婚紗照重複輪放）</p>
-        <p>Guests invited to take their seats</p>
-      </li>
-
-      <li>
-        <p class="time">12:20</p>
-        <!-- <p class="item-chinese">
-          Erica引言新郎 Michael新娘子育甜蜜進場（白紗 背景音樂換）
-        </p> -->
-        <p>新郎新娘介紹及入場</p>
-        <p>Bride and groom introduced and entrance</p>
-      </li>
-      <li>
-        <p class="time">12:30</p>
-        <p class="item-chinese">請牧師謝飯禱告</p>
-        <p>Blessing of the meal by Pastor Pan</p>
-      </li>
-
-      <li class="slideshow-panel">
-        <p class="time">12:50</p>
-        <p class="item-chinese">Michael 的家人和朋友幻燈片</p>
-        <p>
-          <a href="michaelandkiara.m4v" target="_blank"
-            >🍿 Michael's Family and Friends Slideshow</a
-          >
-        </p>
-        <video width="320" height="240" controls>
-          <source src="michaelandkiara.m4v" type="video/mp4" />
-        </video>
-      </li>
-      <li class="slideshow-panel">
-        <p class="time">12:55</p>
-        <a href="michaelandkiara.m4v" target="_blank"
-          ><h2>🍿 子育與賓客的生活照</h2>
-          <p>🍿 Kiara's family slideshow</p></a
-        >
-        <video width="320" controls>
-          <source src="子育家.m4v" type="video/mp4" />
-        </video>
-      </li>
-
-      <li>
-        <p class="time">1:00</p>
-        <p class="item-chinese">新郎的父親致辭，隨後鳳山教會成員唱了一首歌</p>
-        <p>
-          Blessing from the father of the groom followed by a song from the
-          Fongshan church members
-        </p>
-      </li>
-      <li>
-        <p class="time">1:15</p>
-        <p class="item-chinese">子育由小管家帶領至新娘休息室換禮服</p>
-        <p>Kiara leaves to change</p>
-      </li>
-      <li class="music-panel">
-        <p class="time">1:15</p>
-        <p class="item-chinese">賓客繼續用餐（音樂及婚紗照輪播）</p>
-        <p>Guests continue dining (music and wedding photos carousel)</p>
-        <h2>🎶 宴會音樂 Banquet Music</h2>
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/playlist/1gKOgWOANvl1lo5mQ3uTcV?utm_source=generator&theme=0"
-          width="100%"
-          height="80"
-          frameborder="0"
-          allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-          loading="lazy"
-        ></iframe>
-      </li>
-      <li>
-        <p class="time">1:55</p>
-        <p class="item-chinese">
-          子育二進禮服入場（導請婚宴小管家去帶子育同時更換背景音樂）
-        </p>
-        <p>Kiara returns from changing.</p>
-      </li>
-      <li>
-        <p class="time">2:00</p>
-        <p class="item-chinese">雙方家長Michael及子育統一敬酒</p>
-        <p>A toast from the parents of the bride and groom</p>
-        <h3>🛑 停止音樂！ Stop the music!🛑</h3>
-      </li>
-      
-      <li class="slideshow-panel">
-        <p class="time">2:15</p>
-        <a href="子育跟朋友.m4v" target="_blank"
-          ><h2>🍿 子育與賓客的生活照</h2>
-          <p>🍿 Kiara's friends slideshow</p></a
-        >
-        <video width="320" controls>
-          <source src="子育家.m4v" type="video/mp4" />
-        </video>
-      </li>
-      <li>
-        <p class="time">2:20</p>
-        <p class="item-chinese">Michael姪女表演小提琴祝福Michael和子育</p>
-        <p>Ariel's performs a song on the violin</p>
-      </li>
-
-      <li>
-        <p class="time">2:30</p>
-        <p class="item-chinese">Sandra現場祝福Michael和子育獻唱一首歌曲</p>
-        <p>Sandra performs a song for Michael and Kiara</p>
-      </li>
-
-      <!-- <li class="slideshow-panel">
-        <p class="time">2:40</p>
-        <a href="michaelandkiara.m4v" target="_blank"
-          ><h2>🍿 子育與賓客的生活照</h2>
-          <p>🍿 Michael and Kiara's slideshow</p></a
-        >
-        <video width="320" controls>
-          <source src="子育家.m4v" type="video/mp4" />
-        </video>
-      </li> -->
-      <li>
-        <p class="time">2:40</p>
-        <p class="item-chinese">請飯店小管家帶子育到新娘休息室換第三套禮服</p>
-        <p>
-          Ask the hotel butlerto take Yu to the bridal lounge to change into the
-          third dress
-        </p>
-      </li>
-      <li>
-        <p class="time">3:00</p>
-        <p class="item-chinese">子育換好送客禮服。</p>
-        <p>
-          Michael and Kiara greet guests as they depart
-        </p>
-      </li>
-    </ul>
+    Welcome 
+    <a href="thankyou/">Thank You</a>
   </body>
 </html>
